--- a/config.json
+++ b/config.json
@@ -1,36 +1,36 @@
 {
 "locations": [
-        { name: "Cirebon", latitude: -6.698261448, longitude: 108.55981815, varname: "CRB UJOG", sector: "UJOG" },
-        { name: "Pangandaran", latitude: -7.668601524, longitude: 108.72431672, varname: "PGN", sector: "UJOG" },
-        { name: "Palembang", latitude: -2.894326494, longitude: 104.701946, varname: "PLB", sector: "UPLB" },
-        { name: "Jakarta", latitude: -6.132542965, longitude: 106.634537, varname: "CKG UPLB", sector: "UPLB" },
-        { name: "Pekanbaru", latitude: 0.459130454, longitude: 101.44784448, varname: "PKU", sector: "UPKU" },
-        { name: "Jambi", latitude: -1.635302488, longitude: 103.64604351, varname: "DJB", sector: "UPKU" },
-        { name: "Padang", latitude: -0.788403722, longitude: 100.2865148, varname: "PDG UPKU", sector: "UPKU" },
-        { name: "Meulaboh", latitude: 4.047873848, longitude: 96.25028095, varname: "MEU", sector: "UBAC" },
-        { name: "Gunung Linteung", latitude: 5.517778, longitude: 95.417222, varname: "GNLG", sector: "UBAC" },
-        { name: "Tangkuban", latitude: -6.764764219, longitude: 107.6032479, varname: "TKB UBND", sector: "UBND" },
-        { name: "Jakarta", latitude: -6.132542965, longitude: 106.634537, varname: "CKG UBND", sector: "UBND" },
-        { name: "Kulonprogo", latitude: -7.903026654, longitude: 110.0660473, varname: "KLPG", sector: "UBND" },
-        { name: "Cirebon", latitude: -6.698261448, longitude: 108.55981815, varname: "CRB USMG", sector: "USMG" },
-        { name: "Tangkuban", latitude: -6.764764219, longitude: 107.60324787, varname: "TKB USMG", sector: "USMG" },
-        { name: "Sidikalang", latitude: 2.6994, longitude: 98.30269722, varname: "SDKL", sector: "UMDN" },
-        { name: "Sibiru-biru", latitude: 3.398888889, longitude: 98.67804722, varname: "SBR", sector: "UMDN" },
-        { name: "Bengkulu", latitude: -3.796170863, longitude: 102.26566941, varname: "BKL", sector: "UIOS" },
-        { name: "Padang", latitude: -0.787986331, longitude: 100.28643854, varname: "PDG UIOS", sector: "UIOS" },
-        { name: "Nias", latitude: 1.38802537, longitude: 97.40798281, varname: "NIAS", sector: "UIOS" },
-        { name: "Tanjung Pandan", latitude: -2.753, longitude: 107.75299722, varname: "TPD", sector: "UTPD" },
-        { name: "Tangkuban", latitude: -6.764764219, longitude: 107.60324787, varname: "TKB UTPD", sector: "UTPD" },
-        { name: "Tanjung Pinang", latitude: 0.922999978, longitude: 104.5199966, varname: "TNJ UTPG", sector: "UTPG" },
-        { name: "Natuna", latitude: 3.963670015, longitude: 108.4000015, varname: "NTA UTPG", sector: "UTPG" },
-        { name: "Tanjung Karang", latitude: -5.245661657, longitude: 105.178475, varname: "TKG", sector: "UJKT" },
-        { name: "Jakarta", latitude: -6.132542965, longitude: 106.634537, varname: "CKG UJKT", sector: "UJKT" },
-        { name: "Pangkal Pinang", latitude: -2.160398231, longitude: 106.1419171, varname: "PKP", sector: "UPKP" },
-        { name: "Tanjung Pinang", latitude: 0.922999978, longitude: 104.5199966, varname: "TNJ UPKP", sector: "UPKP" },
-        { name: "Matak", latitude: 3.34320013, longitude: 106.2569768, varname: "MTK", sector: "UNTA" },
-        { name: "Natuna", latitude: 3.963670015, longitude: 108.4000015, varname: "NTA UNTA", sector: "UNTA" },
-        { name: "Pontianak", latitude: 0.131439999, longitude: 109.4089966, varname: "PNK", sector: "UPNK" },
-        { name: "Ketapang", latitude: -1.816029, longitude: 109.961583, varname: "KTP", sector: "UPNK" }
+        { "name": "Cirebon", latitude: -6.698261448, longitude: 108.55981815, varname: "CRB UJOG", sector: "UJOG" },
+        { "name": "Pangandaran", latitude: -7.668601524, longitude: 108.72431672, varname: "PGN", sector: "UJOG" },
+        { "name": "Palembang", latitude: -2.894326494, longitude: 104.701946, varname: "PLB", sector: "UPLB" },
+        { "name": "Jakarta", latitude: -6.132542965, longitude: 106.634537, varname: "CKG UPLB", sector: "UPLB" },
+        { "name": "Pekanbaru", latitude: 0.459130454, longitude: 101.44784448, varname: "PKU", sector: "UPKU" },
+        { "name": "Jambi", latitude: -1.635302488, longitude: 103.64604351, varname: "DJB", sector: "UPKU" },
+        { "name": "Padang", latitude: -0.788403722, longitude: 100.2865148, varname: "PDG UPKU", sector: "UPKU" },
+        { "name": "Meulaboh", latitude: 4.047873848, longitude: 96.25028095, varname: "MEU", sector: "UBAC" },
+        { "name": "Gunung Linteung", latitude: 5.517778, longitude: 95.417222, varname: "GNLG", sector: "UBAC" },
+        { "name": "Tangkuban", latitude: -6.764764219, longitude: 107.6032479, varname: "TKB UBND", sector: "UBND" },
+        { "name": "Jakarta", latitude: -6.132542965, longitude: 106.634537, varname: "CKG UBND", sector: "UBND" },
+        { "name": "Kulonprogo", latitude: -7.903026654, longitude: 110.0660473, varname: "KLPG", sector: "UBND" },
+        { "name": "Cirebon", latitude: -6.698261448, longitude: 108.55981815, varname: "CRB USMG", sector: "USMG" },
+        { "name": "Tangkuban", latitude: -6.764764219, longitude: 107.60324787, varname: "TKB USMG", sector: "USMG" },
+        { "name": "Sidikalang", latitude: 2.6994, longitude: 98.30269722, varname: "SDKL", sector: "UMDN" },
+        { "name": "Sibiru-biru", latitude: 3.398888889, longitude: 98.67804722, varname: "SBR", sector: "UMDN" },
+        { "name": "Bengkulu", latitude: -3.796170863, longitude: 102.26566941, varname: "BKL", sector: "UIOS" },
+        { "name": "Padang", latitude: -0.787986331, longitude: 100.28643854, varname: "PDG UIOS", sector: "UIOS" },
+        { "name": "Nias", latitude: 1.38802537, longitude: 97.40798281, varname: "NIAS", sector: "UIOS" },
+        { "name": "Tanjung Pandan", latitude: -2.753, longitude: 107.75299722, varname: "TPD", sector: "UTPD" },
+        { "name": "Tangkuban", latitude: -6.764764219, longitude: 107.60324787, varname: "TKB UTPD", sector: "UTPD" },
+        { "name": "Tanjung Pinang", latitude: 0.922999978, longitude: 104.5199966, varname: "TNJ UTPG", sector: "UTPG" },
+        { "name": "Natuna", latitude: 3.963670015, longitude: 108.4000015, varname: "NTA UTPG", sector: "UTPG" },
+        { "name": "Tanjung Karang", latitude: -5.245661657, longitude: 105.178475, varname: "TKG", sector: "UJKT" },
+        { "name": "Jakarta", latitude: -6.132542965, longitude: 106.634537, varname: "CKG UJKT", sector: "UJKT" },
+        { "name": "Pangkal Pinang", latitude: -2.160398231, longitude: 106.1419171, varname: "PKP", sector: "UPKP" },
+        { "name": "Tanjung Pinang", latitude: 0.922999978, longitude: 104.5199966, varname: "TNJ UPKP", sector: "UPKP" },
+        { "name": "Matak", latitude: 3.34320013, longitude: 106.2569768, varname: "MTK", sector: "UNTA" },
+        { "name": "Natuna", latitude: 3.963670015, longitude: 108.4000015, varname: "NTA UNTA", sector: "UNTA" },
+        { "name": "Pontianak", latitude: 0.131439999, longitude: 109.4089966, varname: "PNK", sector: "UPNK" },
+        { "name": "Ketapang", latitude: -1.816029, longitude: 109.961583, varname: "KTP", sector: "UPNK" }
     ],
 "sectorDescriptions": {
         "UNTA": "Primary Frequency: 134.025 MHz",
