--- a/config.json
+++ b/config.json
@@ -359,10 +359,12 @@
       [-2.156944444,106.1402778],[-0.833333333,106],
       [-0.113333333,107.7283333]
     ],
-        "sectorCoverageFiles": {
-        "UMDN": "data/UMDN_PKU_FL100_FL275_FL400.geojson",
-        "UPKU": "data/UMDN_SBR_40M_FL100_FL275_FL400.geojson",
-        "UPKP": "data/UMDN_SBR_FL_300_FL400.geojson"
+"sectorCoverageFiles": {
+    "UMDN": [
+        { "name": "UMDN PKU FL100-400", "url": "data/UMDN_PKU_FL100_FL275_FL400.geojson" },
+        { "name": "UMDN SDKL FL100-400", "url": "data/UMDN_SDKL_FL100_FL275_FL400.geojson" },
+        { "name": "UMDN SDKL 50M FL100-400", "url": "data/UMDN_SDKL_50M_FL100_FL275_FL400.geojson" }
+    ]
   }
 }
 }
