--- a/config.json
+++ b/config.json
@@ -30,7 +30,7 @@
     { "name": "Matak", "latitude": 3.34320013, "longitude": 106.2569768, "varname": "MTK", "sector": "UNTA" },
     { "name": "Natuna", "latitude": 3.963670015, "longitude": 108.4000015, "varname": "NTA UNTA", "sector": "UNTA" },
     { "name": "Pontianak", "latitude": 0.131439999, "longitude": 109.4089966, "varname": "PNK", "sector": "UPNK" },
-    { "name": "Ketapang", "latitude": -1.816029, "longitude": 109.961583, "varname": "KTP", "sector": "UPNK" }
+    { "name": "Ketapang", "latitude": -1.816029, "longitude": 109.961583, "varname": "KTP", "sector": "UPNK" },
     { "name": "Silangit", "latitude": 2.2612771546416326, "longitude": 98.9850082366345, "varname": "SLGT", "sector": "UMDN" }
   ],
   "sectorDescriptions": {
