Fix latitude and longitude for Silangit
Updated latitude and longitude values for Silangit.

--- a/config.json
+++ b/config.json
@@ -31,7 +31,7 @@
     { "name": "Natuna", "latitude": 3.963670015, "longitude": 108.4000015, "varname": "NTA UNTA", "sector": "UNTA" },
     { "name": "Pontianak", "latitude": 0.131439999, "longitude": 109.4089966, "varname": "PNK", "sector": "UPNK" },
     { "name": "Ketapang", "latitude": -1.816029, "longitude": 109.961583, "varname": "KTP", "sector": "UPNK" },
-    { "name": "Silangit", "latitude": 2.2612771546416326, "longitude": 98.9850082366345, "varname": "SLGT", "sector": "UMDN" }
+    { "name": "Silangit", "latitude": 2.261277, "longitude": 98.9850, "varname": "SLGT", "sector": "UMDN" }
   ],
   "sectorDescriptions": {
     "UNTA": "Primary: 134.025 MHz",
